--- a/about us.html
+++ b/about us.html
@@ -6,6 +6,7 @@
     <title>about us</title>
 </head>
 <body>
+    hi there
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias adipisci voluptates ex placeat enim! Consectetur error accusamus repellat! Facere illum laboriosam dicta aliquam aut voluptatibus sequi quidem, ut facilis praesentium a dolorum, mollitia corrupti minus cumque vel ad nostrum veniam reiciendis error quia? Hic, dicta modi incidunt eveniet doloribus eum cupiditate facilis fuga ipsum dolores expedita, ullam accusantium nulla itaque! Magni aliquid numquam quaerat natus, ad cumque nesciunt, quis nostrum perferendis quibusdam velit! Officia molestias accusamus sint est ullam, incidunt eveniet aliquam quod illum eos iusto, beatae quos illo pariatur commodi quisquam ab ut eum asperiores esse dolorem! Illum, magni.
 </body>
 </html>
